# libestk

./: .travis.yml  CMakeLists.txt  DOC.md  LICENSE  LICENSE.md  README.md  compile_emscriptenlib.sh  emcc.sh  estk.h.in
demores/: attr.vert  cam.vert  font.vert  img.frag  img.vert  red.vert  uni.frag  uni.vert
demos/: attr.c  cam.c  clear.c  events.c  fb.c  font.c  image.c  mainloop.c  quaternion.c  red.c  shaderbase.c  shadercomp.c  sound.c  sprites.c  stride.c  uniform.c
extra/: blender_export.py  jeep.blend
samples/: attr.c  cam.c  clear.c  events.c  framebuffer.c  image.c  mainloop.c  multirender.c  quaternion.c  red.c  shadercomp.c  sound.c  stride.c  uniform.c
samples/resources/: attr.frag  font.frag  mesh_jeep.h  red.frag  sprites.vert
src/: estk.h  estk.h.in  fb.c  font.c  framebuffer.c  gameloop.c  geometry.c  internal.h  log.c  math.c  misc.c  multirender.c  proj.c  projection.c  shader.c  sound.c  sprites.c  texture.c
